feat: IGDB 검색 기능 개선